--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -3,20 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7e5820e6",
+   "id": "63e3811f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "# Import pandas\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "96873113",
+   "id": "49561ce1",
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +31,9 @@
       "[WDM] - ====== WebDriver manager ======\n",
       "[WDM] - Current google-chrome version is 94.0.4606\n",
       "[WDM] - Get LATEST driver version for 94.0.4606\n",
-      "[WDM] - Driver [C:\\Users\\chees\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61\\chromedriver.exe] found in cache\n"
+      "[WDM] - Get LATEST driver version for 94.0.4606\n",
+      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_win32.zip\n",
+      "[WDM] - Driver has been saved in cache [C:\\Users\\chees\\.wdm\\drivers\\chromedriver\\win32\\94.0.4606.61]\n"
      ]
     }
    ],
@@ -41,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "092120bd",
+   "id": "8fd19036",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6875f510",
+   "id": "60777a42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,13 +83,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "abbbe634",
+   "id": "155f82a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">With Mars Methane Mystery Unsolved, Curiosity Serves Scientists a New One: Oxygen</div>"
+       "<div class=\"content_title\">NASA to Hold Mars 2020 Perseverance Rover Launch Briefing</div>"
       ]
      },
      "execution_count": 5,
@@ -99,13 +104,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7fa3c8ae",
+   "id": "1f1d6f75",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'With Mars Methane Mystery Unsolved, Curiosity Serves Scientists a New One: Oxygen'"
+       "'NASA to Hold Mars 2020 Perseverance Rover Launch Briefing'"
       ]
      },
      "execution_count": 6,
@@ -122,13 +127,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "22d000a4",
+   "id": "af42f672",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'For the first time in the history of space exploration, scientists have measured the seasonal changes in the gases that fill the air directly above the surface of Gale Crater on Mars. '"
+       "\"Learn more about the agency's next Red Planet mission during a live event on June 17.\""
       ]
      },
      "execution_count": 7,
@@ -144,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8d9b12f",
+   "id": "183d2e8a",
    "metadata": {},
    "source": [
     "### Featured Images"
@@ -153,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bbbce6ce",
+   "id": "96ba8a67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c3ec8300",
+   "id": "312f5eb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "57f6cc7b",
+   "id": "1d04bfc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,13 +194,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8f1d26c3",
+   "id": "c3088712",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars1.jpg'"
+       "'image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 11,
@@ -212,13 +217,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cb733067",
+   "id": "f04ebde9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
       ]
      },
      "execution_count": 12,
@@ -234,8 +239,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "627972b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mars</th>\n",
+       "      <th>Earth</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>description</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Mars - Earth Comparison</th>\n",
+       "      <td>Mars</td>\n",
+       "      <td>Earth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Diameter:</th>\n",
+       "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mass:</th>\n",
+       "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Moons:</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Distance from Sun:</th>\n",
+       "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Length of Year:</th>\n",
+       "      <td>687 Earth days</td>\n",
+       "      <td>365.24 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperature:</th>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "      <td>-88 to 58°C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    Mars            Earth\n",
+       "description                                              \n",
+       "Mars - Earth Comparison             Mars            Earth\n",
+       "Diameter:                       6,779 km        12,742 km\n",
+       "Mass:                    6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "Moons:                                 2                1\n",
+       "Distance from Sun:        227,943,824 km   149,598,262 km\n",
+       "Length of Year:           687 Earth days      365.24 days\n",
+       "Temperature:                -87 to -5 °C      -88 to 58°C"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
+    "df.columns=['description', 'Mars', 'Earth']\n",
+    "df.set_index('description', inplace=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "52b0dc76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_html()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "db95567c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d9dcff6d",
+   "id": "895af589",
    "metadata": {},
    "outputs": [],
    "source": []
